--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -45,7 +45,7 @@
 
   {% for section in sections %}
     <!-- Data section only for now -->
-    {% include 'home/subdomains/section.html' with section=section %}
+    {% include 'home/subdomains/components/section.html' with section=section %}
   {% endfor %}
 
   <section class="my-5">
