--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col-auto">
         <div class="header-genome australia d-flex align-items-center h-100">
-          GENOMICS
+          GENOME
         </div>
       </div>
     </div>
