Small batch of additions from Anna (#45)
* added workflow info to other sections

* remove assembly workflow for subsampling

* heading for tools sections

* update content in floating info button

* add unicycler tool

* prokka description

* genomics changed to genome, hope this is the right place

* relabel Feedback button

* shorten tool URL so that it defaults to latest

* remove extra quote marks

* genome annotation overview text

* annotation overview png

--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col-auto">
         <div class="header-genome australia d-flex align-items-center h-100">
-          GENOMICS
+          GENOME
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
       data-bs-toggle="modal"
       data-bs-target="#feedbackModal"
     >
-      Feedback
+      Page Feedback
   </button>
   </section>
 </main>
