--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -23,7 +23,7 @@
 
   <section  class="header-genome australia d-flex align-items-center h-100">
     <img id="header-logo" src="{% static 'home/img/subdomains/genome/logo.png' %}" alt="Galaxy Australia Logo">
-    GENOME
+    GENOMES LAB
   </section>
 
   <section class="my-5" id="tagline">
