Update feedback section

--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -46,8 +46,8 @@
   {% endfor %}
 
   <section class="my-5">
-    <h4 class="mb-3">Connect with the Genomics Community</h4>
-    <a class="ga-btn" href="">Link</a>
+    <h4 class="mb-3">We want to hear from you!</h4>
+    <a class="ga-btn" href="">Leave feedback</a>
     <button
       class="ga-btn"
       data-bs-toggle="modal"
