Include community connect modal

--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -19,6 +19,7 @@
 
 <main>
   {% include 'home/subdomains/components/info-modal.html' %}
+  {% include 'home/subdomains/components/community-modal.html' %}
   {% include 'home/subdomains/components/feedback.html' with subdomain='genome' %}
 
   <section  class="header-genome australia d-flex align-items-center h-100">
@@ -47,14 +48,20 @@
 
   <section class="my-5">
     <h4 class="mb-3">Connect with the Genomics Community</h4>
-    <a class="ga-btn" href="">Link</a>
+    <button
+      class="ga-btn"
+      data-bs-toggle="modal"
+      data-bs-target="#communityConnectModal"
+    >
+      Connect
+    </button>
     <button
       class="ga-btn"
       data-bs-toggle="modal"
       data-bs-target="#feedbackModal"
     >
       Page Feedback
-  </button>
+    </button>
   </section>
 </main>
 
