buttons at end of page; anno wfs; misc

--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -47,20 +47,23 @@
   {% endfor %}
 
   <section class="my-5">
-    <h4 class="mb-3">Connect with the Genomics Community</h4>
+    <h4 class="mb-3">Connect with Australian genomics research</h4>
     <button
       class="ga-btn"
       data-bs-toggle="modal"
       data-bs-target="#communityConnectModal"
     >
-      Connect
+      Explore
     </button>
+    <br>
+    <br>
+    <h4 class="mb-3">We want to hear from you!</h4>
     <button
       class="ga-btn"
       data-bs-toggle="modal"
       data-bs-target="#feedbackModal"
     >
-      Page Feedback
+      Leave feedback
     </button>
   </section>
 </main>
