--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -47,7 +47,7 @@
   {% endfor %}
 
   <section class="my-5">
-    <h4 class="mb-3">What's happening in the Australian genomics community</h4>
+    <h4 class="mb-3">What's happening in Australian genomics research?</h4>
     <button
       class="ga-btn"
       data-bs-toggle="modal"
