minor wording changes

--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -31,7 +31,7 @@
     {% include 'home/snippets/static-notices.html' %}
 
     <p>
-      Welcome to the Galaxy Australia Genome lab. Get quick access to tools, workflows and tutorials for genome assembly and annotation.
+      Welcome to the Galaxy Australia Genomes Lab. Get quick access to tools, workflows and tutorials for genome assembly and annotation.
       <a
         href="#"
         data-bs-toggle="modal"
@@ -57,13 +57,13 @@
     </button>
     <br>
     <br>
-    <h4 class="mb-3">We want to hear from you!</h4>
+    <h4 class="mb-3">What do you think of the Genomes Lab?</h4>
     <button
       class="ga-btn"
       data-bs-toggle="modal"
       data-bs-target="#feedbackModal"
     >
-      Leave feedback
+      Give feedback
     </button>
   </section>
 </main>
