--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -33,6 +33,7 @@
 
   <section class="my-5" id="tagline">
     {% include 'home/snippets/static-notices.html' %}
+    {% include 'home/snippets/cover-image.html' %}
 
     <p>
       Welcome to the Galaxy Australia Genome Lab. Get quick access to tools, workflows and tutorials for genome assembly and annotation.
