Fix exported lab image and add custom css

--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -16,6 +16,11 @@
 
 <link rel="stylesheet" href="{% static 'home/css/index.css' %}">
 <link rel="stylesheet" href="{% static 'home/css/subdomains/main.css' %}">
+
+<style>
+  {{ snippets.custom_css|default:"" }}
+</style>
+
 {% endblock %}
 
 
@@ -27,7 +32,11 @@
   {% include 'home/subdomains/components/feedback.html' with subdomain='genome' %}
 
   <section  class="header-subdomain australia d-flex align-items-center h-100">
+    {% if snippets.header_logo %}
+    <img id="header-logo" src="{{ snippets.header_logo }}" alt="{{ site_name }} Logo">
+    {% else %}
     <img id="header-logo" src="{% static 'home/img/subdomains/'|add:name|add:'/logo.png' %}" alt="Galaxy Australia Logo">
+    {% endif %}
     {{ lab_name|default:"Genome Lab"|upper }}
   </section>
 
