--- a/webapp/home/templates/home/subdomains/components/genome-community-modal.html
+++ b/webapp/home/templates/home/subdomains/components/genome-community-modal.html
@@ -7,9 +7,8 @@
       </div>
       <div class="modal-body">
         <p>
-          <p><a href="https://support.biocommons.org.au/support/solutions/articles/6000245526-who-in-australia-is-assembling-genomes-" target="_blank">Who in Australia is assembling genomes?</a></p>
+          <p><a href="https://www.biocommons.org.au/genomics-domain" target="_blank">Discover more genomics activities and services supported by Australian BioCommons</a></p>
           <p><a href="https://groups.google.com/a/biocommons.org.au/g/genome-assembly" target="_blank">Join the Australian BioCommons Genome Assembly Community Group</a></p>
-          <p><a href="https://support.biocommons.org.au/support/solutions/articles/6000245528-who-in-australia-is-annotating-genomes-" target="_blank">Who in Australia is annotating genomes?</a></p>
           <p><a href="https://groups.google.com/a/biocommons.org.au/g/genome-annotation" target="_blank">Join the Australian BioCommons Genome Annotation Community Group</a></p>
         </p>
       </div>
