Fix up genome and proteomics exported labs

--- a/webapp/home/labs/genome/templates/footer.html
+++ b/webapp/home/labs/genome/templates/footer.html
@@ -10,7 +10,7 @@
       </a>
 
       <a href="https://www.melbournebioinformatics.org.au" target="_blank">
-        <img src="https://raw.githubusercontent.com/usegalaxy-au/galaxy-media-site/dev/webapp/home/static/logos/footer/melb-bio-short.png" target="_blank">
+        <img src="https://raw.githubusercontent.com/usegalaxy-au/galaxy-media-site/dev/webapp/home/static/logos/footer/unimelb-2.svg" target="_blank">
       </a>
 
       <a href="https://www.aarnet.edu.au" target="_blank">
@@ -28,7 +28,7 @@
       </a>
 
       <a href="https://www.unimelb.edu.au" target="_blank">
-        <img src="https://raw.githubusercontent.com/usegalaxy-au/galaxy-media-site/dev/webapp/home/static/logos/footer/uni-melbourne.png" target="_blank">
+        <img src="https://raw.githubusercontent.com/usegalaxy-au/galaxy-media-site/dev/webapp/home/static/logos/footer/unimelb-2.svg" target="_blank">
       </a>
 
       <a href="https://bioplatforms.com" target="_blank">
